remove bootstrap, add reacstrap

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,11 +1,17 @@
 body {
   font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
+  margin: 0px;
 }
 
 ol, ul {
   padding-left: 30px;
 }
+
+.box-one {
+  color: '#666666';
+  background-color: 'blue';
+}
+
 
 .board-row:after {
   clear: both;
